<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/startBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="90dp"
        android:text="@string/titleApp"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/colorText"
        android:textSize="40sp" />

    <Button
        android:id="@+id/startBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/progressBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:text="@string/start" />
    <Button
        android:id="@+id/progressBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/progress" />
    <Button
        android:id="@+id/settingBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/progressBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="@string/settings" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_below="@id/settingBtn"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorText"
        android:textAlignment="center"
        android:text="@string/enterprise" />


</RelativeLayout>