<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ReceptionActivity">


    <TextView
        android:id="@+id/textTitleGameChooser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/textGame1"
        android:layout_marginBottom="40dp"
        android:textColor="@color/colorText"
        android:text="@string/titleggamechooser" />



    <TextView
        android:id="@+id/textGame1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/beginB1"
        android:layout_marginBottom="40dp"
        android:textColor="@color/colorText"
        android:text="@string/b1gameReception" />

    <Button
        android:id="@+id/beginB1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/textGame2"
        android:layout_marginBottom="40dp"
         android:text="@string/beginGame" />


    <TextView
        android:id="@+id/textGame2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
         android:textColor="@color/colorText"
        android:text="@string/g1game" />

    <Button
        android:id="@+id/beginG1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textGame2"
        android:layout_marginTop="30dp"
        android:text="@string/beginGame" />




</RelativeLayout>